--- a/src/BannerSection.css
+++ b/src/BannerSection.css
@@ -5,7 +5,8 @@
   justify-content: center;
   padding: 80px 20px;
   position: relative;
-  z-index: 2;   
+  z-index: 2;
+  margin-top: -30px;   
 }
 
 /* Banner container */
